feat: preload image for improved performance

--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://abdurakhmanov.art" />
     <link rel="canonical" href="https://abdurakhmanov.art" />
+    <link
+      rel="preload"
+      as="image"
+      href="/photo-220w.webp"
+      imagesrcset="/photo-220w.webp 220w, /photo-440w.webp 440w"
+      imagesizes="220px"
+      fetchpriority="high"
+    />
     <title>Artur Abdurakhmanov — Senior Frontend Developer</title>
   </head>
   <body>
